# electronic_recognition

./: .env  .gitignore  README.md  environment.yml  model_test.py  pyproject.toml  requirement.txt
.pytest-temp/test_hybrid_search_returns_den0/: drawings.db
.pytest-temp/test_index_service_indexes_bm20/: drawings.db
.pytest-temp/test_search_bm25_returns_funct0/: drawings.db
.pytest-temp/test_search_collapses_history_0/: drawings.db
.pytest-temp/test_search_debug_keeps_histor0/: drawings.db
.pytest-temp/test_search_degrades_to_exact_0/: drawings.db
.pytest-temp/test_search_exact_terms_match_0/: drawings.db
.pytest-temp/test_search_filters_ignore_emp0/: drawings.db
.pytest_tmp/test_search_collapses_history_0/: drawings.db
.pytest_tmp/test_search_debug_keeps_histor0/: drawings.db
.superpowers/brainstorm/: search-results-hybrid-recommended.html  search-results-sketch-compare.html
.trae-preview/: layout-review.html
data/index/: components.json  search_weights.json
data/search/: demo_queries.json
deliverables/: ~$原理图智能识别阶段成果及检索规划汇报.docx  电气原理图智能识别阶段成果及检索规划汇报.docx
docs/: production-startup.md  windows-deployment.md
docs/plan/: 2026-06-22-knowledge-base-management-plan.md
packaging/: ElectronicRecognition.spec  production_entry.py
plan/: 2026-06-22-drawing-hybrid-retrieval-plan.md  2026-06-22-layout-functional-region-routing-plan.md  2026-06-23-json-bm25-vector-search-demo-plan.md
scripts/: build_exe.ps1  clean_rebuild_index.py  fix_filename_encoding.py  import_gbt47287_pages_21_30.py  import_gbt47287_pdf_pages.py  migrate_component_knowledge.py  prefetch_models.py  rebuild_drawing_search_index.py  to_pdf.py  validate_combination_rules.py
src/electronic_recognition/: __init__.py  api.py  cli.py  combination_rules.py  component_table_extractor.py  config.py  control_signal_extractor.py  custom_rule_store.py  custom_rules.py  document.py  image_index.py  knowledge.py  knowledge_store.py  layout_detector.py  layout_models.py  layout_router.py  llm.py  models.py  page_quality.py  pipeline.py  production.py  prompts.py  region_images.py  runtime.py  title_block_extractor.py
src/electronic_recognition.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_combination_rules.py  test_component_table_extractor.py  test_config.py  test_control_signal_extractor.py  test_diff_api.py  test_diff_service.py  test_filename_and_warmup.py  test_frontend_separation.py  test_knowledge_api.py  test_knowledge_store.py  test_layout_router.py  test_production_startup.py  test_recognition.py  test_result_id.py  test_search_api.py  test_title_block_extractor.py
tests/search/: test_embedding.py  test_hybrid_search.py  test_json_result_loader.py  test_qdrant_store.py  test_rebuild_cli.py  test_search_deduplication.py  test_search_degradation.py  test_search_demo_assets.py  test_search_index.py  (+1 more)
tmp/: build_leadership_report.py  search-test.db
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+275 files in other folders)
