[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "electronic-recognition"
version = "0.1.0"
description = "RAG and vision-model component recognition for electrical PDF and PNG drawings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "Pillow>=10.0",
  "pypdf>=5.0",
  "PyMuPDF>=1.24",
  "python-multipart>=0.0.18",
  "uvicorn>=0.34",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
layout = []
ocr = []
search = [
  "qdrant-client>=1.9",
  "sentence-transformers>=3.0",
]

[project.scripts]
electronic-recognition = "electronic_recognition.cli:main"
er = "electronic_recognition.cli:main"
er-rebuild-search-index = "electronic_recognition.search.rebuild:main"

[tool.setuptools.packages.find]
where = ["src"]
