[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "electronic-recognition"
version = "0.1.0"
description = "RAG and vision-model component recognition for electrical PDF and PNG drawings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "Pillow>=10.0",
  "pypdf>=5.0",
  "PyMuPDF>=1.24",
  "python-multipart>=0.0.18",
  "uvicorn>=0.34",
  "numpy>=1.26",
  "opencv-python>=4.9",
  "openpyxl>=3.1",
  "pycatia>=0.8; platform_system == 'Windows'",
  "pywin32>=306; platform_system == 'Windows'",
  # Vector search is on by default (ER_SEARCH_MODE=hybrid). These are required
  # at runtime — keeping them out of an optional extra is what caused servers to
  # silently degrade to BM25 when the env was installed without `[search]`.
  "qdrant-client>=1.9",
  "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
build = ["pyinstaller>=6.0"]
layout = []
ocr = []
# Kept for backward compatibility (e.g. `pip install -e ".[search]"`); the
# packages now live in the base dependencies above.
search = []

[project.scripts]
electronic-recognition = "electronic_recognition.cli:main"
er = "electronic_recognition.cli:main"
er-production = "electronic_recognition.production:main"
er-rebuild-search-index = "electronic_recognition.search.rebuild:main"

[tool.setuptools.packages.find]
where = ["src"]
